Fix project row spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,12 @@ body {
 }
 
 .bg-success {
-  margin-bottom: 0.5px;
+  margin-bottom: 6px;
+}
+
+.project-row {
+  margin-top: 16px;
+  margin-bottom: 16px;
 }
 
 #bg-img {
